--- a/templates/crud_app/empresa/tabela.html
+++ b/templates/crud_app/empresa/tabela.html
@@ -31,15 +31,19 @@
                     </div>
                 
                     <div id="div_id_empresa" class="mb-3"> <label for="id_empresa" class="form-label">Empresa</label> 
-                    <input type="text" name="empresa" maxlength="255" class="textinput textInput form-control" id="id_empresa"> </div> <div id="div_id_safegold_ger" class="mb-3"> <label for="id_safegold_ger" class="form-label">Safegold Gerência? </label> 
+                    <input type="text" name="empresa" maxlength="255" class="textinput textInput form-control" id="id_empresa" required>
+                 </div>
+                  <div id="div_id_safegold_ger" class="mb-3">
+                     <label for="id_safegold_ger" class="form-label">Safegold Gerencia? </label> 
                     <select name="safegold_ger" class="select form-select" id="id_safegold_ger"> 
-                        <option value="">---------</option> 
                         <option value="0">Não</option> 
                         <option value="1" selected="">Sim</option>
                     </select>
                     </div> 
                 
-                    <div id="div_id_cnpj" class="mb-3"> <label for="id_cnpj" class="form-label">Cnpj</label> <input type="text" name="cnpj" maxlength="255" class="textinput textInput form-control" id="id_cnpj"> </div>
+                    <div id="div_id_cnpj" class="mb-3"> <label for="id_cnpj" class="form-label">CNPJ</label>
+                         <input type="text" name="cnpj" class="textinput textInput form-control" id="id_cnpj" onkeypress="$(this).mask('00.000.000/0000-00')"> 
+                    </div>
                 
                     <!--======================================= APAGAR DEPOIS, SOMENTE PARA TESTES =======================================-->
                     
@@ -83,12 +87,12 @@
                     </div>
                     <div class="form-group form-group-sm my-3 ml-3 mr-3">
                         <label for="cnpjFilter">CNPJ</label>
-                        <input type="text" name="cnpj" id="cnpjFilter" class="form-control" aria-label="Large" placeholder="Filtrar por CNPJ" onkeyup="filtrarPorCNPJ()" />
+                        <input type="text" name="cnpj" id="cnpjFilter" class="form-control" aria-label="Large" placeholder="Filtrar por CNPJ" onkeypress="$(this).mask('00.000.000/0000-00')" onkeyup="filtrarPorCNPJ()" />
                     </div>
                     <!--======================================= APAGAR DEPOIS, SOMENTE PARA TESTES =======================================-->
                     <div class="col text-center mb-1 mt-1">
                         <hr>
-                        <button class="btn btn-block btn-success mb-2" id="update_btn">Editar</button>
+                        <button class="btn btn-block btn-success mb-2" id="update_btn">Editar Todos</button>
                         <button class="btn btn-block btn-success mb-2" id="save_all_btn" style="display:none;margin-top:0px">Salvar</button>
                     </div>
                 </div>
@@ -104,10 +108,10 @@
                             <th class="col text-center">ID</th>
                             <th class="col">Empresa</th>
                             <th class="col">Projeto</th>
-                            <th class="col">Data Cadastro</th>
-                            <th class="col">Data Atualizado</th>
+                            <th class="col">Data de Cadastro</th>
+                            <th class="col">Data de Atualização</th>
                             <th class="col">CNPJ</th>
-                            <th class="col text-center ignore-on-print excludeExport">Action</th>
+                            <th class="col text-center ignore-on-print excludeExport">Ações</th>
                         </tr>
                     </thead>
                     <tbody >
@@ -116,8 +120,8 @@
                             <td class="text-center col-md-1">{{empresas.cod_empresa}}</td>
                             <td class="editable" data-id="{{empresas.cod_empresa}}" data-type="empresa">{{empresas.empresa}}</td>
                             <td class="editable" data-id="{{empresas.cod_empresa}}" data-type="cod_projeto">{{empresas.cod_projeto}}</td>
-                            <td class="editable" data-id="{{empresas.cod_empresa}}" data-type="data_cadastro">{{empresas.data_cadastro|date:"d/m/Y H:i" }}</td>
-                            <td class="editable" data-id="{{empresas.cod_empresa}}" data-type="data_atualiza">{{empresas.data_atualiza|date:"d/m/Y H:i" }}</td>
+                            <td class="" data-id="{{empresas.cod_empresa}}" data-type="data_cadastro">{{empresas.data_cadastro|date:"d/m/Y H:i" }}</td>
+                            <td class="" data-id="{{empresas.cod_empresa}}" data-type="data_atualiza">{{empresas.data_atualiza|date:"d/m/Y H:i" }}</td>
                             <td class="editable" data-id="{{empresas.cod_empresa}}" data-type="cnpj">{{empresas.cnpj}}</td>
                             <td class="ignore-on-print excludeExport text-center col-md-2">
                                 <a href="{% url 'crud_app:empresa-detail' pk=empresas.pk %}" class="mx-3" title="Detalhar Conta"><i class="fa-solid fa-up-right-and-down-left-from-center"></i></a>
@@ -142,6 +146,7 @@
 {% block scripts %}
     <script src="{% static 'js/ExportPDF.js' %}"></script>
     <script src="{% static 'js/ExportCSV.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
     <script>
         // SCRIPT DE UPDATE CLICANDO NA TABELA
         $(document).ready(function(){
@@ -216,8 +221,8 @@
                 return;
             }
 
-            else if(cnpj.length != 14){
-                $("#ins_error").text("CNPJ INVALIDO")
+            else if(cnpj.length != 18){
+                $("#ins_error").text("CNPJ inválido")
                 $("#ins_error").show()
                 return;
             }
@@ -261,7 +266,7 @@
         var cod_empresa=this_html.parent().parent().children().first().text();
         //console.log(id);
         $.ajax({
-            url:"#",
+            url:"{% url 'crud_app:delete' %}",
             type:'POST',
             data:{cod_empresa:cod_empresa}
         })
@@ -386,49 +391,4 @@ $(function(){
 {% endblock scripts %}
 
 
-
-
-<form class="sg-content" id="sg_form">
-    <input type="hidden" name="csrfmiddlewaretoken" value="hEVhIjt4q9d7kw1PNNYrfEVOuMwEcjdDN8hwWJdmKZde4sMJLumYtVTBaaPKwFqa"> 
-    
-    
-
-    <div id="div_id_cod_projeto" class="mb-3"> <label for="id_cod_projeto" class="form-label">Projeto</label> 
-        <select name="cod_projeto" class="select form-select" id="id_cod_projeto"> 
-            <option value="" selected="">---------</option>
-            {% for obj in projetos_ativos %}
-            <option value="{{obj.projeto}}" selected="">{{obj.projeto}}</option>
-            {% endfor %} 
-        
-        </select>             
-    </div>
-
-    <div id="div_id_empresa" class="mb-3"> <label for="id_empresa" class="form-label">Empresa</label> 
-    <input type="text" name="empresa" maxlength="255" class="textinput textInput form-control" id="id_empresa"> </div> <div id="div_id_safegold_ger" class="mb-3"> <label for="id_safegold_ger" class="form-label">Safegold Gerência? </label> 
-    <select name="safegold_ger" class="select form-select" id="id_safegold_ger"> 
-        <option value="">---------</option> 
-        <option value="0">Não</option> 
-        <option value="1" selected="">Sim</option>
-    </select>
-    </div> 
-
-    <div id="div_id_cnpj" class="mb-3"> <label for="id_cnpj" class="form-label">Cnpj</label> <input type="text" name="cnpj" maxlength="255" class="textinput textInput form-control" id="id_cnpj"> </div>
-
-    <!--======================================= APAGAR DEPOIS, SOMENTE PARA TESTES =======================================-->
-    
-    <!--======================================= APAGAR DEPOIS, SOMENTE PARA TESTES =======================================-->
-    <div class="col text-center mb-1 mt-1">
-        <input type="button" name="submit" class="btn btn-warning btn-block btn-info btn-insert-data" value="Adicionar" id="btn">
-    </div>
-    <div class="form-group">
-        <div class="alert alert-success" id="ins_success" style="display:none">
-            Empresa cadastrada com sucesso!
-
-        </div>
-         <div class="alert alert-danger" id="ins_error" style="display:none">
-            Ocorreu um erro!                  
-
-        </div>
-    </div>
-</form>
 
